[package]
name = "rhex"
version = "0.0.3"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "ASCII terminal hexagonal map roguelike written in Rust"
keywords = ["roguelike", "game", "hex", "hexagonal"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/rhex/"
homepage = "https://github.com/dpc/rhex"
repository = "https://github.com/dpc/rhex"
readme = "README.md"

[profile.dev]
opt-level = 1
debug = true
lto = false
debug-assertions = true

[dependencies]
num = "*"
rand = "*"
chrono = "*"
hex2d = "*"
hex2d-dpcext = "*"
log = "*"
fern = "*"
schedule_recv = "*"
ncurses = "*"
dpc-simplemap = { git="https://github.com/dpc/simplemap-rs", branch="no_hash_state" }
fnv = "*"
libc = "*"
