[package]
name = "rhex"
version = "0.0.3"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "ASCII terminal hexagonal map roguelike written in Rust"
keywords = ["roguelike", "game", "hex", "hexagonal"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/rhex/"
homepage = "https://github.com/dpc/rhex"
repository = "https://github.com/dpc/rhex"
readme = "README.md"

[profile.dev]
opt-level = 1
debug = true
lto = false
debug-assertions = true

[dependencies]
num = "0.1.30"
rand = "0.3.13"
chrono = "0.2.17"
hex2d = "0.1.0"
hex2d-dpcext = "0.0.9"
log = "0.3.5"
fern = "0.3.5"
schedule_recv = "0.0.1"
ncurses = "5.80.0"
dpc-simplemap = { git="https://github.com/dpc/simplemap-rs", branch="no_hash_state" }
libc = "0.2.5"
